--- a/package.json
+++ b/package.json
@@ -1,20 +1,43 @@
 {
   "name": "friendly-wires",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "Learning stuff",
   "main": "src/index.js",
   "author": "Benjamin Lewis benjamin.lewis.1000@gmail.com",
   "private": true,
+  "license": "TBD",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "@testing-library/jest-dom": ">=4.2.4",
+    "@testing-library/react": ">=9.5.0",
+    "@testing-library/user-event": ">=7.2.1",
+    "axios": ">=0.19.2",
+    "axios-auth-refresh": "*",
+    "forever": "*",
+    "pm2": ">=4.2.3",
+    "react": ">=16.13.1",
+    "react-dom": ">=16.13.1",
+    "react-helmet": ">=6.0.0",
+    "react-idle-timer": "*",
+    "react-router-dom": ">=5.1.2",
+    "react-scripts": ">=3.4.1",
+    "react-spinners": "^0.8.3",
+    "react-xml-parser": ">=1.1.6",
+    "semantic-ui-react": ">=0.88.2",
+    "serve": ">=11.3.0",
+    "store": ">=2.0.12"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build_webpack": "webpack --config webpack.config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
