--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": ">=16.13.1",
     "react-helmet": ">=6.0.0",
     "react-idle-timer": "*",
+    "react-lazy-load-image-component": "^1.5.0",
     "react-router-dom": ">=5.1.2",
     "react-scripts": ">=3.4.1",
     "react-spinners": "^0.8.3",
