--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "private": true,
   "license": "TBD",
   "dependencies": {
+    "@progress/kendo-react-intl": "^3.17.0",
+    "@progress/kendo-react-layout": "^3.17.0",
+    "@progress/kendo-react-popup": "^3.17.0",
+    "@progress/kendo-react-progressbars": "^3.17.0",
     "@testing-library/jest-dom": ">=4.2.4",
     "@testing-library/react": ">=9.5.0",
     "@testing-library/user-event": ">=7.2.1",
@@ -15,9 +19,11 @@
     "forever": "*",
     "pm2": ">=4.2.3",
     "react": ">=16.13.1",
+    "react-contextmenu": "^2.14.0",
     "react-dom": ">=16.13.1",
     "react-helmet": ">=6.0.0",
     "react-idle-timer": "*",
+    "react-infinite-scroll-component": "^5.1.0",
     "react-lazy-load-image-component": "^1.5.0",
     "react-router-dom": ">=5.1.2",
     "react-scripts": ">=3.4.1",
