--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": ">=7.2.1",
     "axios": ">=0.19.2",
     "axios-auth-refresh": "*",
+    "axios-auto-refresh-jwt": "^2.0.2",
     "forever": "*",
     "pm2": ">=4.2.3",
     "react": ">=16.13.1",
@@ -25,6 +26,8 @@
     "react-idle-timer": "*",
     "react-infinite-scroll-component": "^5.1.0",
     "react-lazy-load-image-component": "^1.5.0",
+    "react-modal": "^3.11.2",
+    "react-modal-image": "^2.5.0",
     "react-router-dom": ">=5.1.2",
     "react-scripts": ">=3.4.1",
     "react-spinners": "^0.8.3",
